# git-cartographer

./: .cartographer.toml.sample  .cartographer_state  .gitignore  CLAUDE.md  PRINCIPLE.md  README.md  Runbook.md  pyproject.toml
docs/adr/: ADR-001-json-canonical-output.md  ADR-002-window-always-scan.md  ADR-003-components-axis.md  ADR-004-state-output-dir.md
docs/ears/: EARS-001-map-generation.md  EARS-002-pheromone.md  EARS-003-components-axis.md  EARS-004-ast-digest.md
git_cartographer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
output/: hotspots.md  stable.md  structure.md
src/: ast_scanner.py  cartographer.py  components.py  config.py  git_scanner.py  layers.py  skeleton.py  state.py  traverse_log.py
src/hooks/: post_tool_use.py  pre_tool_use.py
tests/: test_ast_scanner.py  test_components.py  test_config.py  test_git_scanner.py  test_pre_tool_use_ast.py
